--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  h1 {
+    @apply text-[60px] leading-[110%] tracking-tighter;
+  }
+  h2 {
+    @apply text-2xl font-medium tracking-tighter;
+  }
+  h3 {
+    @apply text-lg;
+  }
+  p {
+    @apply font-extralight leading-relaxed;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer components {
+  .section-info {
+    @apply font-extralight;
+  }
+  .btn {
+    @apply px-4 py-2 bg-blue-600 text-white rounded-md;
+  }
+  .highlight {
+    @apply text-yellow-200;
+  }
+  .burger {
+    @apply block w-full h-[1px] bg-black relative transition-all duration-1000;
+  }
+  .rounded-img {
+    @apply object-cover object-center rounded-lg;
   }
 }
